// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Button] [ThemeType.Light] renders without crashing 1`] = `
<View
  activeOpacity={0.7}
  onPress={[Function]}
  testID="btn"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#393D7A",
          "borderBottomColor": "#393D7A",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 2,
          "borderLeftColor": "#393D7A",
          "borderLeftWidth": 2,
          "borderRightColor": "#393D7A",
          "borderRightWidth": 2,
          "borderTopColor": "#393D7A",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 2,
          "height": 52,
          "justifyContent": "center",
          "width": 320,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 14,
          },
          Array [
            Object {
              "color": "#D3D8E8",
            },
            undefined,
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[Button] should render [ThemeType.Dark] without crashing 1`] = `
<View
  activeOpacity={0.7}
  onPress={[Function]}
  testID="btn"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#8A96DC",
          "borderBottomColor": "#8A96DC",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderBottomWidth": 2,
          "borderLeftColor": "#8A96DC",
          "borderLeftWidth": 2,
          "borderRightColor": "#8A96DC",
          "borderRightWidth": 2,
          "borderTopColor": "#8A96DC",
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "borderTopWidth": 2,
          "height": 52,
          "justifyContent": "center",
          "width": 320,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#D3D8E8",
            "fontSize": 14,
          },
          Array [
            Object {
              "color": "#000000",
            },
            undefined,
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`[Button] should render [isDisabled] status without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#393D7A",
        "borderBottomColor": "#393D7A",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 2,
        "borderLeftColor": "#393D7A",
        "borderLeftWidth": 2,
        "borderRightColor": "#393D7A",
        "borderRightWidth": 2,
        "borderTopColor": "#393D7A",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      },
      Array [
        Object {
          "backgroundColor": "#00000030",
          "borderBottomColor": "rgb(200, 200, 200)",
          "borderLeftColor": "rgb(200, 200, 200)",
          "borderRightColor": "rgb(200, 200, 200)",
          "borderTopColor": "rgb(200, 200, 200)",
        },
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 14,
        },
        Array [
          Object {
            "color": "#00000030",
          },
          undefined,
        ],
      ]
    }
  />
</View>
`;

exports[`[Button] should render [isLoading] status without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#393D7A",
        "borderBottomColor": "#393D7A",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderBottomWidth": 2,
        "borderLeftColor": "#393D7A",
        "borderLeftWidth": 2,
        "borderRightColor": "#393D7A",
        "borderRightWidth": 2,
        "borderTopColor": "#393D7A",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "borderTopWidth": 2,
        "height": 52,
        "justifyContent": "center",
        "width": 320,
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;
